added all classes and tag to syle.css file

--- a/style.css
+++ b/style.css
@@ -35,3 +35,177 @@ h6 {
 p {
   margin-bottom: 15px;
 }
+
+.headesection {
+}
+.headeleft {
+}
+.headeleft h2 {
+}
+.headeleft p {
+}
+
+.headeright {
+}
+
+.headeright input[type="text"] {
+}
+.headeright input[type="submit"] {
+}
+
+.menusection {
+}
+.menuleft {
+}
+.menuleft ul {
+}
+.menuleft ul li {
+}
+.menuleft ul li a {
+}
+.menuleft ul li a:hover {
+}
+.menuright {
+}
+.menuright p {
+}
+
+.bannersection {
+}
+.bannerleft {
+}
+
+.bannerleft h2 {
+}
+.bannerleft p {
+}
+
+.bannerlink {
+}
+.banlink {
+}
+.banlink a {
+}
+.banlink a:hover {
+}
+.bannerright {
+}
+
+.bannerright img {
+}
+
+.servicesection {
+}
+
+.service {
+}
+.service h2 {
+}
+
+.service h3 {
+}
+.service p {
+}
+.service a {
+}
+.service a:hover {
+}
+
+.contentsection {
+}
+.contentleft {
+}
+
+.contentleft h2 {
+}
+
+.contentleftdesc {
+}
+
+.leftimage {
+}
+
+.leftimage img {
+}
+
+.righttext {
+}
+
+.righttext h4 {
+}
+.righttext p {
+}
+.righttext a {
+}
+.righttext a:hover {
+}
+
+.contentleftdesc {
+}
+
+.leftimage img {
+}
+
+.righttext {
+}
+.righttext h4 {
+}
+
+.righttext p {
+}
+
+.contentright {
+}
+
+.contentright h2 {
+}
+.contentright img {
+}
+.contentright h4 {
+}
+.contentright p {
+}
+
+.footertop {
+}
+
+.samefooter {
+}
+.samefooter h2 {
+}
+.samefooter p {
+}
+
+.samefooter input[type="text"] {
+}
+.samefooter input[type="submit"] {
+}
+
+.samefooter a {
+}
+.samefooter a:hover {
+}
+
+.samefooter ul {
+}
+
+.samefooter ul li {
+}
+.samefooter ul li a {
+}
+.samefooter ul li a:hover {
+}
+.samefooter p {
+}
+.footerbottom {
+}
+.footleft {
+}
+
+.footleft p {
+}
+
+.footright {
+}
+.footright p {
+}
